--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -3397,11 +3397,15 @@ can vary from one line to the next.
 (S syntax) This is an educated guess made in conjunction with the message
 "%s found where operator expected".  Often the missing operator is a comma.
 
-=item Missing or undefined argument to require
+=item Missing or undefined argument to %s
 
-(F) You tried to call require with no argument or with an undefined
-value as an argument.  Require expects either a package name or a
-file-specification as an argument.  See L<perlfunc/require>.
+(F) You tried to call require or do with no argument or with an undefined
+value as an argument.
+
+Require expects either a package name or a file-specification as an
+argument.  See L<perlfunc/require>.
+
+Do expects a file-specification as an argument.  See L<perlfunc/do>.
 
 =item Missing right brace on \%c{} in regex; marked by S<<-- HERE> in m/%s/
 
